second chart complete

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <body>
 
     <div class="container">
-        <canvas id="sales-line-graph"></canvas>
+        <canvas id="sales-line-chart"></canvas>
     </div>
     <div class="container">
-        <canvas id="sales-pie-graph"></canvas>
+        <canvas id="sales-pie-chart"></canvas>
     </div>
 
     <script src="js/main.js"></script>
