--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>REST-CHARTBOOL</title>
@@ -11,16 +12,42 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js" integrity="sha256-4iQZ6BVL4qNKlQ27TExEhBN1HFPvAvAMbFavKKosSWQ=" crossorigin="anonymous"></script>
-  </head>
-  <body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/locale/it.js" integrity="sha256-D8y560ZGsKY1LoAajKkQCG7y0Vkye361MH4yFv2K5kk=" crossorigin="anonymous"></script>
+</head>
 
-    <div class="container">
-        <canvas id="sales-line-chart"></canvas>
-    </div>
-    <div class="container">
-        <canvas id="sales-pie-chart"></canvas>
-    </div>
+<body>
+    <h2>La dashboard della <span>ACME inc</span></h2>
+    <main>
+        <div class="container">
+            <h4>Fatturato mensile</h4>
+            <canvas id="sales-line-chart"></canvas>
+        </div>
+        <div class="container">
+            <h4>Vendite per venditore</h4>
+            <canvas id="sales-pie-chart"></canvas>
+        </div>
+        <div class="container">
+            <h4>Fatturato per Quarter</h4>
+            <canvas id="sales-bar-chart"></canvas>
+        </div>
+        <div class="container">
+            <h4>Inserimento dati di vendita</h4>
+            <p>Seleziona un venditore, inserisci la data di vendita e poi il valore in €</p>
+            <form class="" action="index.html" method="post">
+                <label>Venditore</label>
+                <select id="vendor-select"></select>
+                <label>Data di vendita:</label>
+                <input type="date" id="day-of-sale" name="day-of-sale" min="2017-01-01" max="2017-12-31" value="2017-01-01">
+                <label>Valore:</label>
+                <input type="number" id="quantity" name="quantity" min="1" max="100000">
+                <input type="submit" value="Submit">
+
+            </form>
+
+        </div>
+    </main>
 
     <script src="js/main.js"></script>
-  </body>
+</body>
+
 </html>
